Syling fixes: Enlarged the area to tap on the edit mentee button Widened name div on mentee view to give more room for the mentee names Added ellipsis overflow on journal list view

--- a/app/styles/apps/journal.scss
+++ b/app/styles/apps/journal.scss
@@ -13,6 +13,9 @@
 
     .entry-container {
       float: left;
+      width: 70%;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     #delete-entry {
