--- a/app/styles/apps/mentee_home.scss
+++ b/app/styles/apps/mentee_home.scss
@@ -2,10 +2,10 @@
 
 #show-mentees-layout {
   h2 {
-    font-size: rem(24);
+    font-size: rem(20);
   }
   p {
-    font-size: rem(14);
+    font-size: rem(12);
   }
 }
 
@@ -18,17 +18,24 @@
   }
 
   .mentee-info {
-    width: rem(150);
+    width: 50%;
     float: left;
   }
 
-  .edit-delete-buttons {
+  .edit-button-container {
     float: right;
-    width: rem(50);
+    width: rem(80);
+    height: rem(60);
     text-align: right;
     position: absolute;
     bottom: rem(10);
     right: 0;
+
+    p#edit-button {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+    }
   }
 
   .icon {
