--- a/app/styles/components/_type.scss
+++ b/app/styles/components/_type.scss
@@ -1,5 +1,6 @@
 .title {
   text-align: center;
   font-weight: 300;
+  font-size: rem(26);
   line-height: rem(50);
 }
